Fixed issue with text sometimes being clipped by :before elements

--- a/src/scripts/viewer/components/nav.scss
+++ b/src/scripts/viewer/components/nav.scss
@@ -168,7 +168,7 @@
 					position: absolute;
 					bottom: 0px;
 					left: -1px;
-					width: 1.2em;
+					width: 0.5em;
 					height: 100%;
 					background: $color-bg;
 				}
